# PTZ-Surveillance-System

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: toolchain-arm64.cmake  toolchain-jetson.cmake
common/: CMakeLists.txt
common/include/surveillance/: config.h  logging.h  onvif_client.h
common/src/: config.cpp  logging.cpp  onvif_client.cpp
gui/: CMakeLists.txt
gui/src/: CalendarPanel.cpp  CalendarPanel.h  ClipExporter.cpp  ClipExporter.h  DetectionLog.cpp  DetectionLog.h  MainWindow.cpp  MainWindow.h  PlaybackController.cpp  PlaybackController.h  PtzController.cpp  PtzController.h  VideoWidget.cpp  VideoWidget.h  main.cpp
k8s/: configmap.yaml  deployments.yaml  namespace.yaml  pv-wdpurple.yaml  secrets.yaml  services.yaml
proto/: CMakeLists.txt  surveillance.proto
services/ai_detect/: CMakeLists.txt  Dockerfile
services/ai_detect/src/: main.cpp
services/ingest/: CMakeLists.txt  Dockerfile
services/ingest/src/: main.cpp
services/log_service/: CMakeLists.txt  Dockerfile
services/log_service/src/: main.cpp
services/ptz_control/: CMakeLists.txt  Dockerfile
services/ptz_control/src/: main.cpp
services/storage/: CMakeLists.txt  Dockerfile
services/storage/src/: main.cpp
services/stream_gateway/: CMakeLists.txt  Dockerfile
services/stream_gateway/src/: main.cpp
tests/: test_onvif.cpp
